--- a/ec2 instances and route53 creation.yaml
+++ b/ec2 instances and route53 creation.yaml
@@ -2,9 +2,9 @@
   hosts: local
   connection: local
   vars:
-    sg_id:
-    subnet_id:
-    ami_id:
+    sg_id: "sg-0d91387712ba38962"
+    subnet_id: "subnet-03ff7a389bf0ac665"
+    ami_id: "ami-09c813fb71547fc4f"
     instances:
     - mysql
     - backend
