--- a/ec2 instances and route53 creation.yaml
+++ b/ec2 instances and route53 creation.yaml
@@ -34,7 +34,7 @@
       state: present
       zone: "{{ zone }}"
       record: "{{ item.item}}.{{ zone }}"
-      value: "{{ item.intstances[0].private_ip_address }}"
+      value: "{{ item.instances[0].private_ip_address }}"
       type: A
       ttl: 1
       wait: true
