--- a/ec2 instances and route53 creation.yaml
+++ b/ec2 instances and route53 creation.yaml
@@ -13,6 +13,17 @@
 
 
   tasks:
+
+
+  - name: installing boto3 and botocore
+    ansible.builtin.pip:
+      name:
+      - boto3
+      - botocore
+
+      executable: pip3.9
+
+      
   - name: creating ec2_instances
     amazon.aws.ec2_instance:
       name: "{{ item }}"
