--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -11,6 +11,6 @@
 - name: expense.conf copying to required path
   ansible.builtin.template:
     src: expense.conf.j2
-    dest: "{{ /etc/nginx/default.d/expense.conf }}"
+    dest: /etc/nginx/default.d/expense.conf
   notify:
   - restart_nginx
