--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -14,7 +14,7 @@
     name: common
     tasks_from: app-pre-req
 
-- name: copying expense.conf
+- name: copying expense conf
   ansible.builtin.template:
     src: expense.conf.j2
     dest: /etc/nginx/default.d/expense.conf
